--- a/package.json
+++ b/package.json
@@ -15,10 +15,15 @@
     "test": "jest"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-brands-svg-icons": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/vue-fontawesome": "^2.0.6",
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/color-mode": "2.1.1",
     "core-js": "^3.19.3",
     "nuxt": "^2.15.8",
+    "nuxt-fontawesome": "^0.4.0",
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
@@ -26,13 +31,14 @@
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.16.3",
+    "@nuxt/postcss8": "^1.1.3",
     "@nuxt/types": "^2.15.8",
     "@nuxt/typescript-build": "^2.1.0",
     "@nuxtjs/eslint-config-typescript": "^8.0.0",
     "@nuxtjs/eslint-module": "^3.0.2",
     "@nuxtjs/stylelint-module": "^4.1.0",
-    "@nuxtjs/tailwindcss": "^4.2.1",
     "@vue/test-utils": "^1.3.0",
+    "autoprefixer": "^10.4.5",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^27.4.4",
     "eslint": "^8.4.1",
@@ -40,13 +46,14 @@
     "eslint-plugin-nuxt": "^3.1.0",
     "eslint-plugin-vue": "^8.2.0",
     "jest": "^27.4.4",
-    "postcss": "^8.4.4",
+    "postcss": "^8.4.12",
     "postcss-html": "^1.3.0",
     "prettier": "^2.5.1",
     "stylelint": "^14.1.0",
     "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-recommended-vue": "^1.1.0",
     "stylelint-config-standard": "^24.0.0",
+    "tailwindcss": "^3.0.24",
     "ts-jest": "^27.1.1",
     "vue-jest": "^3.0.4"
   }
