fix: footer overlap fixing the right way

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,7 @@
       "~/*": ["./*"],
       "@/*": ["./*"]
     },
-    "types": ["@nuxt/types", "@nuxtjs/axios", "@types/node", "@nuxtjs/color-mode"]
+    "types": ["@nuxt/types", "@nuxtjs/axios", "@types/node", "@nuxtjs/color-mode", "@nuxtjs/device"]
   },
   "exclude": ["node_modules", ".nuxt", "dist"]
 }
