--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "core-js": "^3.19.3",
     "nuxt": "^2.15.8",
     "nuxt-fontawesome": "^0.4.0",
-    "nuxt-user-agent": "^1.2.2",
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
@@ -35,6 +34,7 @@
     "@nuxt/postcss8": "^1.1.3",
     "@nuxt/types": "^2.15.8",
     "@nuxt/typescript-build": "^2.1.0",
+    "@nuxtjs/device": "^2.1.0",
     "@nuxtjs/eslint-config-typescript": "^8.0.0",
     "@nuxtjs/eslint-module": "^3.0.2",
     "@nuxtjs/stylelint-module": "^4.1.0",
