--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@nuxtjs/color-mode": "2.1.1",
     "core-js": "^3.19.3",
     "nuxt": "^2.15.8",
+    "nuxt-clipboard": "^0.0.7",
     "nuxt-fontawesome": "^0.4.0",
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
