--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,7 @@
       "~/*": ["./*"],
       "@/*": ["./*"]
     },
-    "types": ["@nuxt/types", "@nuxtjs/axios", "@types/node", "@nuxtjs/color-mode", "@nuxtjs/device"]
+    "types": ["@nuxt/types", "@nuxtjs/axios", "@types/node", "@nuxtjs/color-mode", "@nuxtjs/device", "nuxt-clipboard"]
   },
   "exclude": ["node_modules", ".nuxt", "dist"]
 }
