--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
   "devDependencies": {
     "@nuxt/devtools": "latest",
     "@nuxtjs/color-mode": "^3.3.2",
+    "@nuxtjs/google-fonts": "^3.1.3",
     "@nuxtjs/tailwindcss": "^6.10.1",
+    "@sanity/types": "^3.21.3",
     "nuxt": "^3.8.2",
+    "nuxt-svgo": "^3.7.0",
     "typescript": "^5.3.2",
     "vue": "^3.3.8",
     "vue-router": "^4.2.5"
@@ -24,6 +27,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/vue-fontawesome": "^3.0.5",
+    "@nuxtjs/sanity": "^1.8.3",
     "@vueuse/core": "^10.6.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
